# certificate_chain_verifier

./: .gitignore  CMakeLists.txt  README.md
include/: by_buffer.h  certificate_asn1_file_loader.h  certificate_asn1_loader.h  certificate_loader_factory.h  certificate_pem_file_loader.h  finally.h  icertificate_loader.h  stdafx.h  verifier.h  x509_certificate_chain.h  x509_crl_list.h
src/: bu_buffer.c  certificate_asn1_file_loader.cpp  certificate_asn1_loader.cpp  certificate_loader_factory.cpp  certificate_pem_file_loader.cpp  finally.cpp  main.cpp  verifier.cpp  x509_certificate_chain.cpp  x509_crl_list.cpp
